K1J-501: Implemented GetPersons for v5 (#353)
Co-authored-by: Matias Wurschmidt-Wang <matias.wurschmidt@soprasteria.com>